added Chris's RAL paper (invisible)

--- a/publications.html
+++ b/publications.html
@@ -56,19 +56,23 @@
 <h3>Journal</h3>
 
 <p>
-<b>G. C. Thomas</b>, J. Mehling, J. Holley, and L. Sentis, "Phase-Relaxed-Passive Full State Feedback Gain Limits for Series Elastic Actuators," <i>IEEE/ASME Transactions on Mechatronics,</i> vo. 26, no. 1, pp. 586-591, Feb. 2021. <a href="https://ieeexplore.ieee.org/document/9250572">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf">[pdf]</a>
+<b>G. C. Thomas</b>, J. Mehling, J. Holley, and L. Sentis, "Phase-Relaxed-Passive Full State Feedback Gain Limits for Series Elastic Actuators," <i>IEEE/ASME Transactions on Mechatronics,</i> vol. 26, no. 1, pp. 586-591, Feb. 2021. <a href="https://ieeexplore.ieee.org/document/9250572">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/ThomasMehlingHolleySentis2020TMechpre.pdf">[pdf]</a>
 </p>
 
 <p>
-R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design," <i>IEEE Transactions on Medical Robotics and Bionics (Early Access)</i>, doi: 10.1109/TMRB.2021.3098920 <a href="https://ieeexplore.ieee.org/document/9492308">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a> <a href="https://codeocean.com/capsule/8239141/tree/v1">[CodeOcean]</a>
-</p>
+R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design," <i>IEEE Transactions on Medical Robotics and Bionics</i>, vol. 3, no. 3, pp. 847-851, Aug. 2021. <a href="https://ieeexplore.ieee.org/document/9492308">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a> <a href="https://codeocean.com/capsule/8239141/tree/v1">[CodeOcean]</a>
+</p><!-- vol. 3, no. 3, pp. 847-851, Aug. 2021 -->
 
 <p>
 <b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissonneau, B. He, J. James, N. Paine, and L. Sentis, "Formulating and Deploying Strength Amplification Controllers for Lower-Body Walking Exoskeletons," <i>Frontiers in Robotics and AI (Accepted)</i> <a href="Preprints/ThomasEA2021FrontiersPre.pdf">[pdf]</a> <a href="https://www.frontiersin.org/articles/10.3389/frobt.2021.720231">[Frontiers]</a> </p>
 
-<p>
+<!-- <p>
+  C. Nesler, <b>G. C. Thomas</b>, N. Divekar, E. J. Rouse, and R. D. Gregg, "Enhancing Voluntary Motion with Modular, Backdrivable, Powered Hip and Knee Orthoses," <i>Under Review for R-AL/ICRA 2022 dual submission</i> <a href="Preprints/NeslerThomasDivekarRouseGregg2022RALpre.pdf">[pdf]</a>
+</p> --><!-- Nesler, Christopher* (219846); Thomas, Gray (167370); Divekar, Nikhil (221293); Rouse, Elliott (152926); Gregg, Robert D. (127261) -->
+
+<!-- <p>
 R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, "Can humans perceive the metabolic benefit provided by augmentative exoskeletons?" <i>(Under Review)</i> <a href="Preprints/MedranoThomasRouse2021PNASpre.pdf">[pdf]</a>
-</p>
+</p> -->
 
 <!-- <p>
 R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, R. D. Gregg, "Real-Time Phase and Task Estimation for Controlling a Powered Ankle Exoskeleton on Extremely Uneven Terrain," <i>(In Preparation)</i>. <a href="Preprints/MedranoThomasRouseGregg2021TROpre.pdf">[pdf]</a> <a href="https://www.youtube.com/watch?v=xmJwKG_eP6U">[YouTube]</a>
