updated profile image.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             
     </div>
     <div>
-      <img style="float: left; max-width:100%; padding-right: 10px" height="200" src="images/Gray300dpi.png"> 
+      <!-- <img style="float: left; max-width:100%; padding-right: 10px" height="200" src="images/Gray300dpi.png">  -->
+      <img style="float: left; max-width:100%; padding-right: 10px" height="200" src="images/gray_headshot_crop.jpg"> 
       <img style="float: right; max-width:100%; padding-left: 10px; padding-bottom: 10px; padding-top: 10px" height="180" src="images/HCFS-300dpi.png">
       <span>
         <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="350" src="images/UMEECS-300dpi.png">
