changed the sagit image.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p style="text-align:justify; text-justify:inter-word">
         <a href="Preprints/ThomasGregg2021CDCpre.pdf"><img width="350" src=images/GProject/GProject-AES.png></a>
         <a href="Preprints/ThomasRouse2021DWAbstract.pdf"><img width="350" src=images/GProject/GProject-NL-Springs.png></a>
-        <a href="Preprints/ThomasEA2021FrontiersPre.pdf"><img width="350" src=images/GProject/GProject-Sagit.png></a>
+        <a href="https://www.frontiersin.org/articles/10.3389/frobt.2021.720231/full"><img width="350" src=images/GProject/GProject-Sagit.png></a>
         <a href="Preprints/ThomasLinDivekarNeslerGreggREHABPoster2020.pdf"><img width="350" src=images/GProject/GProject-TIPO.png></a>
         <a href="https://ieeexplore.ieee.org/document/9224374"><img width="350" src=images/GProject/GProject-JND.png></a>
         <a href="https://ieeexplore.ieee.org/document/9492308"><img width="350" src=images/GProject/GProject-JLR.png></a>
