--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
       <img style="float: right; max-width:100%; padding-left: 10px; padding-bottom: 10px; padding-top: 10px" height="180" src="images/HCFS-300dpi.png">
       <span>
         <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="350" src="images/UMEECS-300dpi.png">
-        <p class="affiliation">Postdoctoral Research Fellow<br><a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems</a><br>and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu</p>
+        <p class="affiliation">Senior Research Fellow<br><a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems</a><br>and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu</p>
       </span>
     </div>
 
     <article class="markdown-body">
+      <p>
+        I am a Senior Research Fellow at the University of Michigan specializing in estimation and control for wearable robots. This includes both exoskeletons that make people stronger by measuring and amplifying human power and powered prosthetic legs that the human controls. I envision these robots assisting humans in every day life and enabling new industries by seamlessly augmenting human motions and forces. For example, an elderly person might wear an exoskeleton that magnifies her knee strength so she can safely descend stairs; a person with a missing limb might hike their hip in order to signal their robot leg to clear a Lego castle; and a stonemason might use block sizes that would be impractically massive without the strength provided by their giant robot suit. Today this vision is hindered by a suite of engineering challenges in design, sensing, estimation, human modelling, control, and system integration. My research program in direct human control is working to overcome these challenges using strength amplification, human modelling and estimation, and high-bandwidth design. Strength amplification is directly controlling the robot using the wearer's forces to make it a trustworthy assistive tool like power-steering on a car. Using the sensors on a prosthesis to track unusual walking patterns (which the wearer can control) and mapping these patterns to something like push off power or swing height (which the wearer can't control but wants to) is one example of my research in human modelling and estimation. I plan to build human-robot interface structures and prosthetic sockets that distribute machine power over a large area of human tissue in order to move bones quickly and avoid the delay of deforming soft tissue first as a key part of my research in high-bandwidth design.
+      </p>
       <h1>Research Projects</h1>
       <p style="text-align:justify; text-justify:inter-word">
         <a href="Preprints/ThomasGregg2021CDCpre.pdf"><img width="350" src=images/GProject/GProject-AES.png></a>
