updates post interview

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <div id="container">
      <p class="tagline">
-        An engineering postdoc at the scientific intersection of estimation, control, and wearable robotics.
+        A senior research fellow at the University of Michigan researching direct human control of physically interactive robots.
       </p>
       <div id="main" role="main">
         <p class="download-bar">
@@ -54,11 +54,15 @@
       <img style="float: right; max-width:100%; padding-left: 10px; padding-bottom: 10px; padding-top: 10px" height="180" src="images/HCFS-300dpi.png">
       <span>
         <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="350" src="images/UMEECS-300dpi.png">
-        <p class="affiliation">Postdoctoral Research Fellow<br><a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems</a><br>and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu</p>
+        <p class="affiliation">Senior Research Fellow<br><a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems</a><br>and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu</p>
       </span>
     </div>
 
+
     <article class="markdown-body">
+
+    <h1> What is Direct Control of Physically Interactive Robots?</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rHDf4N0GwgU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h1>Research Projects</h1>
       <p style="text-align:justify; text-justify:inter-word">
         <a href="Preprints/ThomasGregg2021CDCpre.pdf"><img width="350" src=images/GProject/GProject-AES.png></a>
