--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
     
     <div id="container">
      <p class="tagline">
-        An engineering postdoc at the scientific intersection of estimation, control, and wearable robotics.
+        A senior research fellow at the University of Michigan researching direct human control of physically interactive robots.
       </p>
       <div id="main" role="main">
         <p class="download-bar">
@@ -74,6 +74,17 @@ J. Lin, N. V. Divekar, <b>G. C. Thomas</b>, R. D. Gregg, "Task-Invariant Passivi
 <p>
 <b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissonneau, B. He, J. James, N. Paine, and L. Sentis, "Formulating and Deploying Strength Amplification Controllers for Lower-Body Walking Exoskeletons," <i>Frontiers in Robotics and AI</i>, vol. 8, pp. 295, Sept. 2021. <a href="Preprints/ThomasEA2021FrontiersPre.pdf">[pdf]</a> <a href="https://www.frontiersin.org/articles/10.3389/frobt.2021.720231">[Frontiers]</a> </p>
 
+<p>
+J. Lin, N. V. Divekar, <b>G. C. Thomas</b>, R. D. Gregg, “Optimally Biomimetic Passivity-Based Control of a Lower-Limb Exoskeleton Over the Primary Activities of Daily Life,” <i>IEEE Open Journal of Control Systems</i>, doi: 10.1109/OJCSYS.2022.3165733. (Early Access) <a href="https://ieeexplore.ieee.org/document/9756252">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/LinDivekarThomasGregg2021pre.pdf">[pdf]</a>
+</p> 
+
+<p>
+C. Nesler, <b>G. C. Thomas</b>, N. Divekar, E. J. Rouse, R. D. Gregg, “Enhancing Voluntary Motion with Modular, Backdrivable, Powered Hip and Knee Orthoses,” <i>IEEE Robotics and Automation Letters</i>, vol. 7, no. 3, pp. 6155-6162, July 2022, doi: 10.1109/LRA.2022.3145580. <a href="https://ieeexplore.ieee.org/document/9691920">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/NeslerThomasDivekarRouseGregg2022RAL.pdf">[pdf]</a>
+</p>
+
+<p>
+R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, “Can humans perceive the metabolic benefit provided by augmentative exoskeletons?” <i>Journal of NeuroEngineering and Rehabilitation</i>, vol 19, no. 26, February 2022, doi: 10.1186/s12984-022-01002-w <a href="https://jneuroengrehab.biomedcentral.com/articles/10.1186/s12984-022-01002-w">[Springer]</a> <a href="https://graythomas.github.io/Preprints/MedranoThomasRouse2021JNERpre.pdf">[pdf]</a> 
+</p>
 
 <p>
 R. L. Medrano, E. Rouse, <b>G. C. Thomas</b>, "Biological Joint Loading and Exoskeleton Design," <i>IEEE Transactions on Medical Robotics and Bionics</i>, vol. 3, no. 3, pp. 847-851, Aug. 2021. <a href="https://ieeexplore.ieee.org/document/9492308">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/MedranoRouseThomas2020TMRBpre.pdf">[pdf]</a> <a href="https://codeocean.com/capsule/8239141/tree/v1">[CodeOcean]</a>
@@ -114,15 +125,15 @@ T. Koolen, S. Bertrand, <b>G. C. Thomas</b>, T. de Boer, T. Wu, J. Smith, J. Eng
 <h3>Conference</h3>
 
 <p>
-<b>G. C. Thomas</b>, R. D. Gregg, "An Energy Shaping Exoskeleton Controller for Human Strength Amplification," <i>2021 IEEE Conference on Decision and Control (accepted)</i> <a href="Preprints/ThomasGregg2021CDCpre.pdf">[pdf]</a>
+<b>G. C. Thomas</b>, R. D. Gregg, "An Energy Shaping Exoskeleton Controller for Human Strength Amplification,” in <i> The 2021 IEEE Conference on Decision and Control</i>, pp. 1419-1425, doi: 10.1109/CDC45484.2021.9682793 <a href="Preprints/ThomasGregg2021CDCpre.pdf">[pdf]</a>  <a href="https://ieeexplore.ieee.org/document/9682793">[IEEE]</a>
 </p>
 
 <p>
-E. Bolívar-Nieto, <b>G. C. Thomas</b>, E. Rouse, R. D. Gregg, "Convex Optimization for Spring Design in Series Elastic Actuators: From Theory to Practice," <i>2021 IEEE/RSJ International Conference on Intelligent Robotics and Systems (accepted)</i> <a href="https://web.eecs.umich.edu/locolab/documents/BolivarGregg-IROS2021.pdf">[pdf]</a>
+E. Bolívar-Nieto, <b>G. C. Thomas</b>, E. Rouse, R. D. Gregg, "Convex Optimization for Spring Design in Series Elastic Actuators: From Theory to Practice," in the <i>2021 IEEE/RSJ International Conference on Intelligent Robotics and Systems</i>, pp. 9327-9332, 2021. <a href="https://web.eecs.umich.edu/locolab/documents/BolivarGregg-IROS2021.pdf">[pdf]</a>
 </p>
 
 <p>
-R. Medrano, <b>G. C. Thomas</b>, and E. Rouse. "Methods for Measuring the Just Noticeable Difference for Variable Stimuli: Implications for Perception of Metabolic Rate with Exoskeleton Assistance." at <i>The 8th IEEE RAS/EMBS International Conference for Biomedical
+R. Medrano, <b>G. C. Thomas</b>, and E. Rouse. "Methods for Measuring the Just Noticeable Difference for Variable Stimuli: Implications for Perception of Metabolic Rate with Exoskeleton Assistance." in <i>The 8th IEEE RAS/EMBS International Conference for Biomedical
 Robotics and Biomechatronics</i>, pp. 483-490, New York City, NY, 2020. <a href="https://ieeexplore.ieee.org/document/9224374">[IEEE]</a>
 </p>
 
@@ -132,7 +143,7 @@ B. He, <b>G. C. Thomas</b>, and L. Sentis. "Robust Estimator-Based Safety Verifi
 </p>
 
 <p>
-H. Huang, H. Cappel, <b>G. C. Thomas</b>, and L. Sentis. "Adaptive Compliance Shaping with Human Impedance Estimation." In <i>The 2020 American Control Conference</i>, pp. 3419-3424.
+H. Huang, H. Cappel, <b>G. C. Thomas</b>, B. He, and L. Sentis. "Adaptive Compliance Shaping with Human Impedance Estimation." In <i>The 2020 American Control Conference</i>, pp. 3419-3424.
 <a href="https://arxiv.org/abs/1910.12902">[ArXiv]</a> <a href="https://ieeexplore.ieee.org/document/9147875">[IEEE]</a>
 </p>
 
