updated for promotion to research investigator

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <div id="container">
      <p class="tagline">
-        A senior research fellow at the University of Michigan researching direct human control of physically interactive robots.
+        Research Investigator at the University of Michigan in direct human control of physically interactive robots.
       </p>
       <div id="main" role="main">
         <p class="download-bar">
@@ -53,8 +53,10 @@
       <img style="float: left; max-width:100%; padding-right: 10px" height="200" src="images/gray_headshot_crop.jpg"> 
       <img style="float: right; max-width:100%; padding-left: 10px; padding-bottom: 10px; padding-top: 10px" height="180" src="images/HCFS-300dpi.png">
       <span>
-        <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="350" src="images/UMEECS-300dpi.png">
-        <p class="affiliation">Senior Research Fellow<br><a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems</a><br>and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu</p>
+        <!-- <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="350" src="images/UMEECS-300dpi.png"> -->
+        <img style="vertical-align:top; padding-left: 00px; padding-top: 10px; padding-right: 00px; max-width:100%; padding-bottom: 10px" width="350" src="images/MRobotics_informal_outlines_digital.svg">
+        <p class="affiliation">Research Investigator, U-M Department of Robotics, with the <a href="https://web.eecs.umich.edu/locolab/team.html">Locomotor Control Systems Lab</a><br><!-- and <a href="https://neurobionics.robotics.umich.edu/">Neurobionics Laboratories</a><br>gcthomas{at}umich.edu -->
+        </p>
       </span>
     </div>
 
