--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
     
     <div id="container">
      <p class="tagline">
-        A senior research fellow at the University of Michigan researching direct human control of physically interactive robots.
+        Research Investigator at the University of Michigan in direct human control of physically interactive robots.
       </p>
       <div id="main" role="main">
         <p class="download-bar">
@@ -75,16 +75,16 @@ J. Lin, N. V. Divekar, <b>G. C. Thomas</b>, R. D. Gregg, "Task-Invariant Passivi
 <b>G. C. Thomas</b>, O. Campbell IV, N. Nichols, N. Brissonneau, B. He, J. James, N. Paine, and L. Sentis, "Formulating and Deploying Strength Amplification Controllers for Lower-Body Walking Exoskeletons," <i>Frontiers in Robotics and AI</i>, vol. 8, pp. 295, Sept. 2021. <a href="Preprints/ThomasEA2021FrontiersPre.pdf">[pdf]</a> <a href="https://www.frontiersin.org/articles/10.3389/frobt.2021.720231">[Frontiers]</a> </p>
 
 <p>
-R. L. Medrano, <b>G. C. Thomas</b>, E. J. Rouse, R. D. Gregg, “Analysis of the Bayesian Gait-State Estimation Problem for Lower-Limb Wearable Robot Sensor Configurations,” IEEE Robotics and Automation Letters vol. 7, no. 3, pp. 7463 - 7470,  July 2022, doi: 10.1109/LRA.2022.3183790. <a href="https://ieeexplore.ieee.org/abstract/document/9798814">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/MedranoThomasRouseGregg2022RALpre.pdf">[pdf]</a>
+R. L. Medrano, <b>G. C. Thomas</b>, E. J. Rouse, R. D. Gregg, “Analysis of the Bayesian Gait-State Estimation Problem for Lower-Limb Wearable Robot Sensor Configurations,” <i>IEEE Robotics and Automation Letters</i>, vol. 7, no. 3, pp. 7463 - 7470,  July 2022, doi: 10.1109/LRA.2022.3183790. <a href="https://ieeexplore.ieee.org/abstract/document/9798814">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/MedranoThomasRouseGregg2022RALpre.pdf">[pdf]</a>
 </p>
-
-<p>
-J. Lin, N. V. Divekar, <b>G. C. Thomas</b>, R. D. Gregg, “Optimally Biomimetic Passivity-Based Control of a Lower-Limb Exoskeleton Over the Primary Activities of Daily Life,” <i>IEEE Open Journal of Control Systems</i>, doi: 10.1109/OJCSYS.2022.3165733. (Early Access) <a href="https://ieeexplore.ieee.org/document/9756252">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/LinDivekarThomasGregg2021pre.pdf">[pdf]</a>
-</p> 
 
 <p>
 C. Nesler, <b>G. C. Thomas</b>, N. Divekar, E. J. Rouse, R. D. Gregg, “Enhancing Voluntary Motion with Modular, Backdrivable, Powered Hip and Knee Orthoses,” <i>IEEE Robotics and Automation Letters</i>, vol. 7, no. 3, pp. 6155-6162, July 2022, doi: 10.1109/LRA.2022.3145580. <a href="https://ieeexplore.ieee.org/document/9691920">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/NeslerThomasDivekarRouseGregg2022RAL.pdf">[pdf]</a>
 </p>
+
+<p>
+J. Lin, N. V. Divekar, <b>G. C. Thomas</b>, R. D. Gregg, “Optimally Biomimetic Passivity-Based Control of a Lower-Limb Exoskeleton Over the Primary Activities of Daily Life,” <i>IEEE Open Journal of Control Systems</i>, vol. 1, pp. 15 - 28, April 2022, doi: 10.1109/OJCSYS.2022.3165733. <a href="https://ieeexplore.ieee.org/document/9756252">[IEEE]</a> <a href="https://graythomas.github.io/Preprints/LinDivekarThomasGregg2021pre.pdf">[pdf]</a>
+</p> 
 
 <p>
 R. L. Medrano, <b>G. C. Thomas</b>, E. Rouse, “Can humans perceive the metabolic benefit provided by augmentative exoskeletons?” <i>Journal of NeuroEngineering and Rehabilitation</i>, vol 19, no. 26, February 2022, doi: 10.1186/s12984-022-01002-w <a href="https://jneuroengrehab.biomedcentral.com/articles/10.1186/s12984-022-01002-w">[Springer]</a> <a href="https://graythomas.github.io/Preprints/MedranoThomasRouse2021JNERpre.pdf">[pdf]</a> 
